Add markdown capability

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <main id="items-container">
         <!-- Items will be dynamically inserted here -->
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
