--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1 id="site-title"></h1>
+        <p id="price-note"></p>
         <div>
             <button id="language-toggle">Español</button>
             <a href="#" target="_blank" id="whatsapp-button"></a>
